# interview_apple

./: CMakeLists.txt  README.md
include/: trie.h
scripts/: make.sh
src/: test.cpp
